# speedsnake

./: .gitignore  CLAUDE.md  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setcron.sh  speedcheck.sh
.github/actions/deploy-cloudformation/: action.yml
.github/actions/deploy-deployment-role-wrapper/: action.yml
.github/actions/deploy-infrastructure-wrapper/: action.yml
.github/actions/deploy-universe/: action.yml
.github/actions/docker-retag-universe/: action.yml
.github/actions/get-repo-metadata/: action.yml
.github/actions/python-quality-check/: action.yml
.github/actions/validate-cloudformation/: action.yml
.github/workflows/: ci.yml  deploy-infrastructure.yml  docker-publish.yml
cache/speedtest/: 20250814_results.json
docker/: .dockerignore
docker/development/: Dockerfile  docker-compose.yml
docker/production/: Dockerfile  docker-compose.yml
infrastructure/: README.md  deployment-role.yml  template.yml  update-deployment-role.py
speedsnake/aws/: s3.py  ssm.py  sts.py
speedsnake/core/: logging.py
speedsnake/data/: parquet.py  results.py
speedsnake/handlers/: loop.py
speedsnake/service/: environment.py  s3.py  upload.py
speedtest/: environment.py  logging.py  speedtest.py
speedtest/core/: logging.py
speedtest/data/: parquet.py  results.py
speedtest/handlers/: loop.py
speedtest/service/: environment.py  speedtest.py
tests/: conftest.py  test_environment.py  test_logging.py  test_speedtest.py
tests/aws/: test_s3.py  test_ssm.py  test_sts.py
tests/core/: test_environment.py  test_logging.py
tests/data/: test_parquet.py  test_results.py
tests/handlers/: test_loop.py
tests/service/: test_environment.py  test_s3.py  test_speedtest.py  test_upload.py
