[project]
name = "internet-speed-check"
version = "0.1.0"
description = "I am tired of always checking my internet speed..."
authors = [
  { name = "Christopher Khoo", email = "khoojinnwei@gmail.com" },
]
dependencies = []
requires-python = "~=3.13"

[project.urls]
repository = "https://github.com/thekhoo/internet-speed-check"

[project.optional-dependencies]
development = [
  'pytest',
  'pytest-sugar',
  'ruff',
  'pyrefly',
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["speedtest"]

[tool.pyrefly]
project_includes = ["speedtest"]